# Spetekkimyo

./: .gitignore  app.py  config.ipynb  config.txt  create_font.py  features.fea  features.py  generate.py  index.html  index.py  lookups.py  main.py  pyproject.toml  run.bat  sets.json  test.ipynb  test.py
export/: export.py  rename.py  visual_rework.sfd  visual_rework_reference.sfd
glyphs/: a.eps  a.tail.eps  above.d.eps  below.s.c.eps  below.s.eps  bottom.j.eps  bottom.q.eps  chain.a.c.eps  chain.a.o.eps  chain.c.a.eps  chain.f.u2.eps  chain.u.f2.eps  ds.eps  e.eps  g.eps  head.a.eps  head.b.eps  head.c.eps  head.k.o.eps  head.n.u2.eps  head.o.eps  head.s.b.eps  head.t.c.eps  head.t.o.eps  head.u.eps  i.eps  il.large.eps  j.eps  join.a.bottom.eps  join.c.top_left.eps  join.e.bottom.eps  join.o.top.eps  k.eps  ks.eps  kt.eps  kts.eps  l.eps  l.large.eps  l.small.eps  layer.go_down.eps  (+34 more)
glyphs/above/: ts.eps
glyphs/above/d/: s.eps
glyphs/above/k/: s.eps
glyphs/below/c/: s.eps
glyphs/bottom/: h.eps
glyphs/chain/: p.eps
glyphs/chain/f2/: t.eps
glyphs/double/: s.eps
glyphs/head/: y.eps
glyphs/middle/: b.eps  k.eps  u.eps
glyphs/tail/: c.eps  iy.eps  k.eps  s.eps
glyphs/top/: yi.eps
output/: c_Gotham-Medium.eps
spetekkimyo/: __init__.py  command.py  config.py  features.py  generate.py  index.py  run.py  sets.json
spetekkimyo/glyphs/: b.eps  c.eps  d.eps  f.eps  h.eps  hi.eps  iy.eps  ji.eps  li.eps  m.eps  o.eps  p.eps  q.eps  sd.eps  space.eps  st.eps  w.eps
spetekkimyo/input/: features.fea  padding.json
static/: examples.txt  interface.html
(+150 files in other folders)
