[tool.poetry]
name = "Spetekkimyo"
version = "0.1.0"
description = "A helpful tool for creating a font so Seiso."
authors = ["Raphael Nguyen <raph.nyn@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.115.5"
pydantic = "^2.10.1"
uvicorn = "^0.32.1"
python-multipart = "^0.0.17"

[tool.poetry.dev-dependencies]
# Add any dev-specific dependencies here, like linters, formatters, or testing libraries.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"