[project]
name = "spetekkimyo"
version = "0.1.0"
description = "Generate and test opentype font file"
authors = [
    {name = "Raph",email = "94909118+Ryustiel@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
